buildscript {
    ext {
        dependencyManagementVersion = '1.1.7'
        springBootVersion = '3.5.4'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        classpath("io.spring.gradle:dependency-management-plugin:${dependencyManagementVersion}")
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

plugins {
    id 'base'
}


subprojects {
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'org.yechan'
    version = '1.0-SNAPSHOT'
    sourceCompatibility = '21'

    configurations {
        developmentOnly
        runtimeClasspath {
            extendsFrom developmentOnly
        }
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }

    dependencies {
        // ---- Lombok ----
        compileOnly 'org.projectlombok:lombok:1.18.36'
        annotationProcessor 'org.projectlombok:lombok:1.18.36'
        testCompileOnly 'org.projectlombok:lombok:1.18.36'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'

        // ---- Testing ----
        testImplementation 'org.mockito:mockito-inline:5.2.0'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        // null safety
        implementation 'org.jspecify:jspecify:1.0.0'
    }

    tasks.named('test') {
        useJUnitPlatform()
//        failFast = true
        jvmArgs = ['-XX:+EnableDynamicAgentLoading', '-Xshare:off']
        systemProperty 'spring.profiles.active', 'test'
    }
}
